tests/derive_arc/fails/receiver_box.stderr
error: cannot derive `Arc` for a trait declaring methods with arbitrary receiver types
 --> tests/derive_arc/fails/receiver_box.rs:7:18
  |
7 |     fn increment(self: Box<Self>);
  |                  ^^^^^^^^^^^^^^^
